# sage

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  LICENSE.md  README.md  ROADMAP.md  docker-compose.yml  justfile
.github/workflows/: build.yml
migrations/: 20260327215240_init.sql
src/: agent.rs  cli.rs  db.rs  embedder.rs  indexer.rs  main.rs  tui.rs
src/agent/: prompt.rs  tools.rs
src/indexer/: code.rs  html.rs  pdf.rs  text.rs
tests/: integration.rs
