[package]
name = "sage"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "sage"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
crossterm = "0.29"
dotenvy = "0.15"
eventsource-stream = "0.2"
futures-util = "0.3"
hex = "0.4"
indicatif = "0.18.4"
pdf-extract = "0.10.0"
pgvector = { version = "0.4", features = ["sqlx"] }
ratatui = "0.30.0"
reqwest = { version = "0.13.2", features = ["json", "stream"] }
scraper = "0.26.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11.0"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls"] }
tokio = { version = "1", features = ["full"] }
tree-sitter = "0.26.7"
tree-sitter-c = "0.24.1"
tree-sitter-rust = "0.24.2"
walkdir = "2"

[dev-dependencies]
testcontainers = "0.27.2"
